Register image
Register Image work completed