@@ -1,15 +1,9 @@
-
 package com.Savore.Controller;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.regex.Pattern;
-
-import com.Savore.model.UserModel;
-import com.Savore.service.RegisterService;
-import com.Savore.util.PasswordUtil;
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.MultipartConfig;
@@ -17,112 +11,104 @@ import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpSession;
 import jakarta.servlet.http.Part;
 
-@WebServlet(urlPatterns = {"/RegistrationPage"})
-@MultipartConfig(maxFileSize = 1024 * 1024 * 5)
+import com.Savore.model.UserModel;
+import com.Savore.service.RegisterService;
+import com.Savore.util.ImageUtil;
+import com.Savore.util.PasswordUtil;
+import com.Savore.util.RedirectionUtil;
+
+@WebServlet(asyncSupported = true, urlPatterns = { "/RegistrationPage" })
+@MultipartConfig(
+    fileSizeThreshold = 1024 * 1024 * 2,  // 2MB
+    maxFileSize = 1024 * 1024 * 10,       // 10MB
+    maxRequestSize = 1024 * 1024 * 50     // 50MB
+)
 public class RegisterController extends HttpServlet {
     private static final long serialVersionUID = 1L;
-    private static final Pattern EMAIL_PATTERN = Pattern.compile("^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$");
+
     private RegisterService registerService;
+    private ImageUtil imageUtil;
+    private RedirectionUtil redirectionUtil;
+
+    private static final Pattern EMAIL_PATTERN = Pattern.compile("^[\\w.-]+@([\\w-]+\\.)+[\\w-]{2,4}$");
 
     @Override
     public void init() throws ServletException {
-        registerService = new RegisterService();
+        this.registerService = new RegisterService();
+        this.imageUtil = new ImageUtil();
+        this.redirectionUtil = new RedirectionUtil();
     }
 
     @Override
     protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
-        req.getRequestDispatcher("/WEB-INF/pages/RegistrationPage.jsp").forward(req, resp);
+        redirectionUtil.redirectToPage(req, resp, RedirectionUtil.registerUrl);
     }
 
     @Override
     protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
         try {
             UserModel user = extractUserModel(req);
-            boolean isRegistered = registerService.registerUser(user);
+            Boolean isAdded = registerService.registerUser(user);
 
-            if (isRegistered) {
-                HttpSession session = req.getSession();
-                session.setAttribute("successMessage", "Registration successful! Please log in.");
-                resp.sendRedirect(req.getContextPath() + "/logIn");
+            if (isAdded) {
+                if (uploadImage(req, user.getImage_URL())) {
+                    redirectionUtil.setMsgAndRedirect(req, resp, "success", "Account created successfully!", RedirectionUtil.loginUrl);
+                } else {
+                    redirectionUtil.setMsgAndRedirect(req, resp, "error", "Account created but image upload failed.", RedirectionUtil.registerUrl);
+                }
             } else {
-                StringBuilder errorMsg = new StringBuilder("Registration failed: ");
-                if (registerService.isUsernameExists(user.getUsername())) {
-                    errorMsg.append("Username already exists. ");
-                }
-                if (registerService.isEmailExists(user.getEmail())) {
-                    errorMsg.append("Email already exists. ");
-                }
-                if (errorMsg.toString().equals("Registration failed: ")) {
-                    errorMsg.append("An unexpected error occurred.");
-                }
-                req.setAttribute("error", errorMsg.toString());
-                req.getRequestDispatcher("/WEB-INF/pages/RegistrationPage.jsp").forward(req, resp);
+                redirectionUtil.setMsgAndRedirect(req, resp, "error", "Registration failed. Try again!", RedirectionUtil.registerUrl);
             }
-        } catch (IllegalArgumentException e) {
-            req.setAttribute("error", e.getMessage());
-            req.getRequestDispatcher("/WEB-INF/pages/RegistrationPage.jsp").forward(req, resp);
         } catch (Exception e) {
-            req.setAttribute("error", "An unexpected error occurred: " + e.getMessage());
-            req.getRequestDispatcher("/WEB-INF/pages/RegistrationPage.jsp").forward(req, resp);
+            e.printStackTrace();
+            redirectionUtil.setMsgAndRedirect(req, resp, "error", "An exception occurred during registration.", RedirectionUtil.registerUrl);
         }
     }
 
     private UserModel extractUserModel(HttpServletRequest req) throws Exception {
-        UserModel user = new UserModel();
-
-        String username = req.getParameter("fullname");
-        String password = req.getParameter("password");
+        String fullname = req.getParameter("fullname");
         String email = req.getParameter("email");
+        String password = req.getParameter("password");
         String address = req.getParameter("address");
         String role = req.getParameter("role");
-
-        // Handle profile image
-        Part imagePart = req.getPart("profileImage");
-        String imageFileName = Paths.get(imagePart.getSubmittedFileName()).getFileName().toString();
-
-        // Define the upload directory: /Resources/Images/Profile
-        String uploadDirPath = req.getServletContext().getRealPath("/") + "Resources" + File.separator + "Images" + File.separator + "Profile";
-        File uploadDir = new File(uploadDirPath);
-        if (!uploadDir.exists()) uploadDir.mkdirs();
-
-        // Save image to disk
-        String savedImagePath = uploadDirPath + File.separator + imageFileName;
-        imagePart.write(savedImagePath);
-
-        // Validation
-        if (username == null || username.trim().isEmpty())
-            throw new IllegalArgumentException("Username is required.");
-        if (username.trim().length() > 50)
-            throw new IllegalArgumentException("Username must not exceed 50 characters.");
-        if (password == null || password.trim().isEmpty())
-            throw new IllegalArgumentException("Password is required.");
-        if (password.length() < 8)
-            throw new IllegalArgumentException("Password must be at least 8 characters long.");
-        if (email == null || email.trim().isEmpty())
-            throw new IllegalArgumentException("Email is required.");
-        if (!EMAIL_PATTERN.matcher(email.trim()).matches())
+        
+        
+        if (fullname == null || fullname.trim().isEmpty())
+            throw new IllegalArgumentException("Full name is required.");
+        if (email == null || !EMAIL_PATTERN.matcher(email.trim()).matches())
             throw new IllegalArgumentException("Invalid email format.");
-        if (email.trim().length() > 100)
-            throw new IllegalArgumentException("Email must not exceed 100 characters.");
+        if (password == null || password.trim().length() < 8)
+            throw new IllegalArgumentException("Password must be at least 8 characters.");
         if (role == null || role.trim().isEmpty())
             throw new IllegalArgumentException("Role is required.");
 
-        // Set values
-        user.setUsername(username.trim());
-        user.setPassword(PasswordUtil.hashPassword(password.trim()));
+        // Encrypt password
+        String encryptedPassword = PasswordUtil.hashPassword(password.trim());
+
+        // Handle uploaded image
+        Part imagePart = req.getPart("profileImage");
+        String originalFileName = imageUtil.getImageNameFromPart(imagePart);
+        String extension = originalFileName.substring(originalFileName.lastIndexOf('.'));
+        String uniqueFileName = "IMG_" + DateTimeFormatter.ofPattern("yyyyMMddHHmmss").format(LocalDateTime.now()) + extension;
+
+        // Populate UserModel
+        UserModel user = new UserModel();
+        user.setUsername(fullname.trim());
         user.setEmail(email.trim());
-        user.setAddress(address != null && !address.trim().isEmpty() ? address.trim() : null);
+        user.setPassword(encryptedPassword);
+        user.setAddress((address != null && !address.isBlank()) ? address.trim() : null);
         user.setRole(role.trim().toUpperCase());
         user.setCreatedAt(LocalDateTime.now());
         user.setIsSubscribed(false);
-
-        // ✅ Store only the file name (not full path) in the database
-        user.setImage_URL(imageFileName);
+        user.setImage_URL(uniqueFileName); // only filename stored in DB
 
         return user;
     }
 
+    private boolean uploadImage(HttpServletRequest req, String filename) throws IOException, ServletException {
+        Part imagePart = req.getPart("profileImage");
+        return imageUtil.uploadImage(imagePart, "", ""); // assumes path logic is handled in ImageUtil
+    }
 }
